[gd_scene load_steps=2 format=2]

[ext_resource path="res://client/game/mode/fugitive/hud/ExitGameHud.gd" type="Script" id=1]

[node name="ExitGameHud" type="Control"]
anchor_right = 0.232
anchor_bottom = 0.2
margin_right = 0.039978
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameDialog" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -37.0
margin_right = 148.5
margin_bottom = 80.0
popup_exclusive = true
window_title = "Leave Game"
dialog_text = "Are you sure?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="ExitGameDialog" to="." method="_on_ExitGameDialog_about_to_show"]
[connection signal="confirmed" from="ExitGameDialog" to="." method="_on_ExitGameDialog_confirmed"]
[connection signal="popup_hide" from="ExitGameDialog" to="." method="_on_ExitGameDialog_popup_hide"]
